@@ -1,1 +1,5 @@
 # IFT1025-TP2-server
+
+Pour faire rouler le jar du clientFX, nous avons dû faire rouler client_fx.jar sur un ordinateur Windows en utilisant cette commande dans le terminal, avec le path pour le SDK de javaFX :
+
+java --module-path {PATH} --add-modules=javafx.controls,javafx.fxml -jar client_fx.jar
